feat(186): aligned parsing for lidl receipts
